--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/prettier": "^1.16.4",
     "antlr4ts-cli": "^0.5.0-alpha.3",
     "cross-env": "^5.2.0",
+    "npm-run-all": "^4.1.5",
     "typescript": "^3.5.1"
   },
   "files": [
@@ -31,7 +32,9 @@
     "url": "https://github.com/seikichi/prettier-plugin-json-antlr4"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production tsc -p .",
+    "build:ts": "cross-env NODE_ENV=production tsc -p .",
+    "build:g4": "antlr4ts -o src/antlr4 -no-listener JSON.g4",
+    "build": "run-s build:g4 build:ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc -p . --watch"
   }
