--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "build:g4": "antlr4ts -o src/antlr4 -no-listener JSON.g4",
     "build": "run-s build:g4 build:ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "tsc -p . --watch"
+    "watch": "tsc -p . --watch",
+    "prettier": "prettier --plugin ."
   }
 }
