--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "url": "https://github.com/seikichi/prettier-plugin-json-antlr4"
   },
   "scripts": {
-    "build:ts": "cross-env NODE_ENV=production tsc -p .",
-    "build:g4": "antlr4ts -o src/antlr4 -no-listener JSON.g4",
     "build": "run-s build:g4 build:ts",
+    "build:g4": "antlr4ts -o src/antlr4 -no-listener JSON.g4",
+    "build:ts": "cross-env NODE_ENV=production tsc -p .",
+    "prettier": "prettier --plugin .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "tsc -p . --watch",
-    "prettier": "prettier --plugin ."
+    "watch": "tsc -p . --watch"
   }
 }
